--- a/blocks/double-chain-block/_index.scss
+++ b/blocks/double-chain-block/_index.scss
@@ -12,6 +12,11 @@
 	}
 
 	&__child-item {
+		&:empty {
+			@include scss.block-components("quad-chain-child-item-empty");
+			@include scss.block-properties("quad-chain-child-item-empty");
+		}
+
 		@include scss.block-components("double-chain-child-item");
 		@include scss.block-properties("double-chain-child-item");
 	}
